--- a/app/src/main/res/layout/building_listview_detail.xml
+++ b/app/src/main/res/layout/building_listview_detail.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
@@ -8,40 +10,73 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
         android:text="TowerName"
-        android:textSize="24sp" />
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/numberLevelsTextView"
+        android:id="@+id/totalLevelsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="78dp"
-        android:text="levels" />
+        android:layout_marginTop="30dp"
+        android:text="levels: 10"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toStartOf="@+id/warningNumTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/summaryHeader" />
 
     <TextView
-        android:id="@+id/warningNumberTextView"
+        android:id="@+id/warningNumTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="40dp"
-        android:text="warnings"
-        android:textSize="24sp" />
+        android:layout_marginTop="30dp"
+        android:text="warning: 0"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/summaryHeader" />
 
     <TextView
-        android:id="@+id/numberSsidTextView"
+        android:id="@+id/totalAPTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="114dp"
-        android:text="SSID" />
+        android:layout_marginTop="30dp"
+        android:text="AP: 100"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/totalLevelsTextView"
+        app:layout_constraintTop_toBottomOf="@+id/totalLevelsTextView" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/criticalNumTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="30dp"
+        android:text="critical: 0"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/warningNumTextView"
+        app:layout_constraintTop_toBottomOf="@+id/warningNumTextView" />
+
+    <TextView
+        android:id="@+id/summaryHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
+        android:text="Summary:"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/towerNameTextView" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
