completed tower page

--- a/app/src/main/res/layout/building_listview_detail.xml
+++ b/app/src/main/res/layout/building_listview_detail.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
         android:text="TowerName"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:text="levels: 10"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/warningNumTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/summaryHeader" />
 
@@ -36,11 +37,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="30dp"
         android:text="warning: 0"
         android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/summaryHeader"
         app:layout_constraintTop_toBottomOf="@+id/summaryHeader" />
+
+    <TextView
+        android:id="@+id/criticalNumTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="32dp"
+        android:text="critical: 0"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/warningNumTextView"
+        app:layout_constraintTop_toBottomOf="@+id/warningNumTextView" />
 
     <TextView
         android:id="@+id/totalAPTextView"
@@ -53,18 +67,6 @@
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="@+id/totalLevelsTextView"
         app:layout_constraintTop_toBottomOf="@+id/totalLevelsTextView" />
-
-    <TextView
-        android:id="@+id/criticalNumTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:text="critical: 0"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/warningNumTextView"
-        app:layout_constraintTop_toBottomOf="@+id/warningNumTextView" />
 
     <TextView
         android:id="@+id/summaryHeader"
