--- a/app/src/main/res/layout/activity_tower_a_levels.xml
+++ b/app/src/main/res/layout/activity_tower_a_levels.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".towerALevelsActivity">
+    tools:context=".TowerActivity">
 
     <ListView
-        android:id="@+id/towerAListView"
+        android:id="@+id/towerListView"
         android:layout_width="409dp"
         android:layout_height="601dp"
         app:layout_constraintEnd_toEndOf="parent"
