--- a/app/src/main/res/layout/tower_a_levels_detail.xml
+++ b/app/src/main/res/layout/tower_a_levels_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/towerAlevelListView"
+        android:id="@+id/towerLevelName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -11,7 +11,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
         android:text="level x"
-        android:textSize="24sp" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/numAPTextView"
@@ -20,17 +20,29 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="70dp"
-        android:text="Number of AP: x" />
+        android:layout_marginTop="90dp"
+        android:text="AP: 0"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/warningTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
-        android:text="Warning: x"
+        android:layout_marginStart="250sp"
+        android:layout_marginTop="50dp"
+        android:text="Warning: 0"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/criticalTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="90dp"
+        android:text="Critical: 0"
         android:textSize="24sp" />
 </RelativeLayout>
