done with colour indicator, made the warning and critical number dynamic for both the building page and levels page

--- a/app/src/main/res/layout/activity_tower_a_levels.xml
+++ b/app/src/main/res/layout/activity_tower_a_levels.xml
@@ -8,8 +8,8 @@
 
     <ListView
         android:id="@+id/towerListView"
-        android:layout_width="409dp"
-        android:layout_height="601dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="1dp" />
