--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="indicatorRed">#BF1A2F</color>
+    <color name="indicatorYellow">#F7D002</color>
+    <color name="indicatorGreen">#2BA84A</color>
 </resources>
