--- a/app/src/main/res/drawable/yellow_indicator.xml
+++ b/app/src/main/res/drawable/yellow_indicator.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     >
-    <solid android:color="@color/indicatorYellow"></solid>
+    <solid android:color="@color/indicatorOrange"></solid>
 
     <size android:height="20dp"
         android:width="20dp"/>
